testsuite/tests/typing-modules-bugs/pr7112_bad.compilers.reference
File "pr7112_bad.ml", line 21, characters 30-31:
21 | module G (X : F(N).S) : A.S = X
                                   ^
Error: Signature mismatch:
       Modules do not match: (F(N).S with X) is not included in A.S
